# pub-msl

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: 41945.csv  42900.csv  cali_housing_binary.csv  create_adult.ipynb  player.csv  segmentation.ipynb  thyroid.ipynb
experiments/: calibrationcurve.py  create_adult.ipynb  critical_difference.ipynb  datasets.ipynb  evalqreg.py  main_experiment.py  miss_cascade.ipynb  plots.ipynb  plots_clean.ipynb  plots_draft.ipynb  plots_pre.ipynb  precreccurve.py  runner.py  xgboost_baseline_experiment.py  xgboost_testing.ipynb
fig/: binary_bacc_cd.tex
miss/: __init__.py
results/: dataset=187,fold=0,clf=msl_prebin,score_set=(-3,-2,-1,0,1,2,3)—b339a8259179634d.csv  dataset=187,fold=1,clf=msl_prebin,score_set=(-3,-2,-1,0,1,2,3)—531a4a8706854ba4.csv  dataset=187,fold=10,clf=msl_prebin,score_set=(-3,-2,-1,0,1,2,3)—46a5a335bc66d796.csv  dataset=187,fold=11,clf=msl_prebin,score_set=(-3,-2,-1,0,1,2,3)—bbfae5e082a096b4.csv  dataset=187,fold=12,clf=msl_prebin,score_set=(-3,-2,-1,0,1,2,3)—75155e7ee78f8ebb.csv  dataset=187,fold=13,clf=msl_prebin,score_set=(-3,-2,-1,0,1,2,3)—e267b86958ae2aa1.csv  dataset=187,fold=14,clf=msl_prebin,score_set=(-3,-2,-1,0,1,2,3)—6df3b294beb45f41.csv  dataset=187,fold=15,clf=msl_prebin,score_set=(-3,-2,-1,0,1,2,3)—f8af931ab1f7aa80.csv  dataset=187,fold=16,clf=msl_prebin,score_set=(-3,-2,-1,0,1,2,3)—7d7663a2763644e9.csv  dataset=187,fold=17,clf=msl_prebin,score_set=(-3,-2,-1,0,1,2,3)—5d990553d3194d57.csv  dataset=187,fold=18,clf=msl_prebin,score_set=(-3,-2,-1,0,1,2,3)—8a9f97c08325098a.csv  dataset=187,fold=19,clf=msl_prebin,score_set=(-3,-2,-1,0,1,2,3)—b0cd241c2c048215.csv  dataset=187,fold=2,clf=msl_prebin,score_set=(-3,-2,-1,0,1,2,3)—0f99c7b65547975b.csv  dataset=187,fold=20,clf=msl_prebin,score_set=(-3,-2,-1,0,1,2,3)—797f1208b56049ed.csv  dataset=187,fold=21,clf=msl_prebin,score_set=(-3,-2,-1,0,1,2,3)—77e929013c7d2396.csv  dataset=187,fold=22,clf=msl_prebin,score_set=(-3,-2,-1,0,1,2,3)—01006eb01045e696.csv  (+7738 more)
(+287 files in other folders)
