[tool.poetry]
name = "pub-ml-psl"
version = "0.1.0"
description = ""
authors = ["Stefan <stefan.heid@lmu.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scikit-learn = "^1.3"
pandas = "^2.2"
numpy = "^1.26"
scipy = "^1.14"
jupyter = "^1.0.0"
matplotlib = "^3.8"
seaborn = "^0.13"
tqdm = "^4.66"
scikit-psl = { git = "http://github.com/trr318/scikit-psl", branch = "master" }
joblib = "^1.4"
networkx = "^3.3"
optuna = "^4.0.0"
xgboost = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
